gac_sb/objects/INNOcontroleQualite__c.object
<CustomObject>
    <fields>
        <fullName>cirDotTauxDotation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Sait-on justifier le taux d&apos;affectation des dotations ?</inlineHelpText>
        <label>CIR - Justitifer taux dotation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirExtAnterieur__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cohérence globale par rapport aux années antérieures</inlineHelpText>
        <label>CIR - Prestations années antérieures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirExtDependance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Liens de dépendance de l’organisme vérifié</inlineHelpText>
        <label>CIR - Liens de dépendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirExtEuropeen__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prestataires européens</inlineHelpText>
        <label>CIR - Prestataires européens</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirExtFactureDate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Date de la facture spécifiée</inlineHelpText>
        <label>CIR - Prestation date facture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirExtFactureLibelle__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Libellé de la facture vérifié</inlineHelpText>
        <label>CIR - Libellé facture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirExtFactureMontantHT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Montant HT indiqué</inlineHelpText>
        <label>CIR - Prestation montant HT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirExtJustifPrestation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A-t-on récupéré les justificatifs liées à la prestation (facture, CDC, …) ?</inlineHelpText>
        <label>CIR - Jusitifier prestation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirExtPlafond__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prise en compte du plafonnement de ce poste de dépense (ratio dépenses internes / dépenses prestées, 2 M€ si lien de dépendance, 10 M€ pour les privés, 12 M€ si publics + privés)</inlineHelpText>
        <label>CIR - Prestations plafonnement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirExtPrive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prestations auprès d&apos;organismes privés -&gt; vérification de l&apos;agrément (SIREN) et récupération de l&apos;attestation d&apos;agrément</inlineHelpText>
        <label>CIR - Organismes privés</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirExtProjetValo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Sait-on relier chaque prestation aux projets valorisés ? -&gt; justification de l&apos;enjeu de la prestation sous-traitée dans le cadre du déroulé du projet</inlineHelpText>
        <label>CIR - Prestation sur projet valorisé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirExtPublic__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prestations auprès d&apos;organismes publics -&gt; doublement du montant de la facture</inlineHelpText>
        <label>CIR - Organismes publics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirExtRenonciation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A-t-on vérifié s&apos;il n&apos;y avait pas eu renonciation à l&apos;agrément ?</inlineHelpText>
        <label>CIR - Renonciation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirMajChamps__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mise à jour des champs relatifs à l&apos;audit dans la fiche mission</inlineHelpText>
        <label>CIR - Maj champs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirNormaAnterieur__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cohérence globale par rapport aux années antérieures</inlineHelpText>
        <label>CIR - Normalisation années antérieures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirNormaEligible__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Organisme éligible</inlineHelpText>
        <label>CIR - Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirNormaJustif__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Justificatifs collectés</inlineHelpText>
        <label>CIR - Justificatifs Normalisation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirNormaTempsPreparation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Le temps de préparation de ces réunions est exclu</inlineHelpText>
        <label>CIR - Temps de préparation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirNote__c</fullName>
        <inlineHelpText>Quelle note mets-tu à ta Valo ? ( / 5)</inlineHelpText>
        <label>CIR - Note</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cirPersonnelAffectPersonnel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Affectation de chaque personnel à un projet valorisé</inlineHelpText>
        <label>CIR - Affectation personnel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelAnterieur__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cohérence globale par rapport aux années antérieures</inlineHelpText>
        <label>CIR - Personnel années antérieures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelCharge__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Retraitement des charges sociales</inlineHelpText>
        <label>CIR - Charges sociales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelDate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contrôler les dates entrée / sortie / changement de statut du personnel</inlineHelpText>
        <label>CIR - Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelIdentPersonnel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identification de chaque personnel (attention aux homonymes possibles --&gt; correspondance avec les matricules)</inlineHelpText>
        <label>CIR - Identification personnel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelInteressement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prise en compte de l&apos;intéressement / participation</inlineHelpText>
        <label>CIR - Intéressement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelJustifImplantation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Justifier l&apos;implication technique du personnel de support</inlineHelpText>
        <label>CIR - Justifier implantation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelNonPointants__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prise en compte et justification des non-pointants</inlineHelpText>
        <label>CIR - Non pointants</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelPresenceIngenieur__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérifier la présence d&apos;au moins un ingénieur / chef de projet par projet valorisé</inlineHelpText>
        <label>CIR - Présence ingénieur</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelQualifTechnique__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Qualification technique du personnel et récupération du diplôme correspondant</inlineHelpText>
        <label>CIR - Qualification technique</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelRD__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérifier la cohérence du taux RD de la personne valorisée par rapport à sa fonction (vigilance au 100%)</inlineHelpText>
        <label>CIR - RD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelSalaire__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prise en compte du salaire brut annuel</inlineHelpText>
        <label>CIR - Salaire brut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelTauxCharge__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cohérence du taux de charges affecté au personnel</inlineHelpText>
        <label>CIR - Taux de charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelTempsTravail__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Contrôler les valeurs du temps de travail effectif  du personnel</inlineHelpText>
        <label>CIR - Temps de travail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirPersonnelVerifJustificat__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérifier les justificatifs des statuts particuliers : Jeunes Docteurs, Thésard,  Mise à Disposition du personnel, Intérimaires, Stagiaires, Personnel non salarié, Inventeur</inlineHelpText>
        <label>CIR - Vérifier justificatifs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirRDAnterieur__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cohérence par rapport année N-1</inlineHelpText>
        <label>CIR - RD année N-1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirSubvAgree__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Pour les sociétés agréées qui déclarent du CIR : déduction des montants des sommes facturées à l&apos;entreprise donneuse d&apos;ordre qui bénéficie du CIR pour les travaux d&apos;innovation confiés</inlineHelpText>
        <label>CIR - Sociétés agréées</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirSubvAnnee__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérification de l&apos;année de perception de la subvention</inlineHelpText>
        <label>CIR - Subvention année</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirSubvAnterieur__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérification de la méthode de déduction utilisée en année N-1 pour appliquer la continuité de méthode</inlineHelpText>
        <label>CIR - Déduction années antérieures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirSubvCabinetDeduction__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Déduction des honoraires au résultat du cabinet de conseil</inlineHelpText>
        <label>CIR - Cabinet déduction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirSubvCabinetRemu__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Rémunération au forfait du cabinet de conseil</inlineHelpText>
        <label>CIR - Cabinet rémunération</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirSubvDeduite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Subventions publiques antérieurement déduites et qui ont été remboursées sur l&apos;année (à réintégrer)</inlineHelpText>
        <label>CIR - Subvention déduite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirSubvMontant__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérification du montant à déduire/à réintégrer par rapport aux dépenses engagées</inlineHelpText>
        <label>CIR - Subvention montant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirSubvNature__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérifier la nature de la subvention / de l&apos;avance remboursable</inlineHelpText>
        <label>CIR - Subvention nature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirSubvRD__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Subventions publiques / avances remboursables perçues (à déduire) : Vérification qu&apos;il s&apos;agit bien une subvention liée à la RD</inlineHelpText>
        <label>CIR - Subvention RD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirSubvThesard__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérifier que lorsqu&apos;on valorise un thésard CIFRE, une subvention ANRT doit être déduite</inlineHelpText>
        <label>CIR - Thésard CIFRE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirTotalAnterieur__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cohérence par rapport année N-1</inlineHelpText>
        <label>CIR - Total année N-1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirTotalProjetValo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Rattachement de l’ensemble des coûts de personnel, dotations aux amortissements et subventions à un projet donné</inlineHelpText>
        <label>CIR - Total sur projet valorisé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirVeilleAnterieur__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cohérence globale par rapport aux années antérieures</inlineHelpText>
        <label>CIR - Veille années antérieures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirVeilleNature__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérification de la nature de la veille (abonnements, congrès, abonnement à des bases de données …) et des dates de factures relatives</inlineHelpText>
        <label>CIR - Nature veille</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirVeillePlafond__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prise en compte du plafonnement de ce poste de dépense (60 000€)</inlineHelpText>
        <label>CIR - Veille plafonnement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirVeilleProjetValo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Valorisation du personnel en veille (option 2) : sait-on relier la personne à un projet avec un temps cohérent (% faible) ?</inlineHelpText>
        <label>CIR - Veille sur projet valorisé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dofAnnexes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Annexes de toutes les pièces justificatives (CV, diplômes, factures, contrats, …)</inlineHelpText>
        <label>DoF - Annexes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dofMajChamps__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mise à jour des champs relatifs à l&apos;audit dans la fiche mission</inlineHelpText>
        <label>DoF - Maj champs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dofMatrice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A-t-on la correspondance (matrice) projet décrit / personne / heures ?</inlineHelpText>
        <label>DoF - Matrice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dofNote__c</fullName>
        <inlineHelpText>Quelle note mets-tu au dossier financier ? ( / 5)</inlineHelpText>
        <label>DoF - Note</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dofPresentation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mise en forme et présentation des éléments de valorisation</inlineHelpText>
        <label>DoF - Présentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dofProjetValo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérifier que le périmètre valorisé correspond au périmètre justifié</inlineHelpText>
        <label>DoF - Périmètre valorisé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotAnnexes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Annexes justificatives (fichiers sources) disponibles en cas de contrôle (archivage)</inlineHelpText>
        <label>DoT - Annexes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotDJ__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Description du chapeau introductif du DJ</inlineHelpText>
        <label>DoT - DJ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotDescription__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Description des travaux effectués par les prestataires valorisés</inlineHelpText>
        <label>DoT - Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotHeuresProjet__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Cohérence entre description technique et le volume d&apos;heures du projet</inlineHelpText>
        <label>DoT - Heures projet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotIndicateursListe__c</fullName>
        <inlineHelpText>Liste des indicateurs</inlineHelpText>
        <label>DoT - Liste indicateurs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Absolu</fullName>
                </value>
                <value>
                    <fullName>Important</fullName>
                </value>
                <value>
                    <fullName>Sans indicateur</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dotIndicateurs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Présence des indicateurs clés</inlineHelpText>
        <label>DoT - Indicateurs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotMatrice__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A-t-on à 100% la correspondance (matrice) projet décrit / personne / heures ?</inlineHelpText>
        <label>DoT - Matrice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotNote__c</fullName>
        <inlineHelpText>Quelle note mets-tu au dossier technique ? ( / 5)</inlineHelpText>
        <label>DoT - Note</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dotPj__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>PJ ajoutée dans IA</inlineHelpText>
        <label>DoT - PJ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotProjetValo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérifier que le périmètre justifié correspond au périmètre valorisé</inlineHelpText>
        <label>DoT - Périmètre valorisé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotProjets__c</fullName>
        <inlineHelpText>Si non, lister les projets concernés</inlineHelpText>
        <label>DoT - Liste des projets</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>dotQualiteNote__c</fullName>
        <inlineHelpText>Note ( /5)</inlineHelpText>
        <label>DoT - Qualité note</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dotQualite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Qualité et robustesse de l&apos;information fournie par le client  ( / 5)</inlineHelpText>
        <label>DoT - Qualité</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotRegroupementsNo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Non</inlineHelpText>
        <label>DoT - Regroupements non</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotRegroupementsYes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Si oui, a-t-on la traçabilité de ces regroupements entre la donnée client initiale et le dossier final ?</inlineHelpText>
        <label>DoT - Regroupements oui</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotRegroupements__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Des regroupements ont-ils été faits ?</inlineHelpText>
        <label>DoT - Regroupements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotRelecture__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Relecture orthographique et syntaxe</inlineHelpText>
        <label>DoT - Relecture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dotVerrou__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Vérifier qu’un verrou technologique / incertitude technique = un état de l&apos;art</inlineHelpText>
        <label>DoT - Verrou technologique</label>
        <type>Checkbox</type>
    </fields>
    <label>Contrôle Qualité</label>
    <nameField>
        <displayFormat>CQ-{00000}</displayFormat>
        <label>Contrôle Qualité</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contrôles Qualité</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>